css/home.css
/* ... */
.container .panel-left .panel-left-header a img {
  width: 50px;
  height: 50px;
}
.container .panel-left .panel-left-header #close-left-panel {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  margin: 0 20px;
  transition: 0.3s;
  height: 54px;
}
.container .panel-left .panel-left-header #close-left-panel i {
  transition: 0.3s;
  transform: rotate(0deg);
}
.container .panel-left .panel-left-header #close-left-panel i:hover {
  transform: rotate(180deg);
}
.container .panel-left .panel-left-header #close-left-panel:hover,
.container .panel-left .panel-left-header #close-left-panel:focus {
  color: rgba(0, 0, 0, 0.5);
}
.container .panel-left .panel-left-header #close-left-panel:active {
  color: rgba(0, 0, 0, 0.2);
}
.container .panel-left .panel-left-header #title,
.container .panel-left .panel-left-header #logo {
  display: none;
  white-space: nowrap;
}
.container .panel-left button p {
  display: none;
  white-space: nowrap;
}
.container .panel-left button {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  background: transparent;
  width: 100%;
  gap: 10px;
  border: none;
  outline: none;
  padding: 10px;
  transition: 0.3s;
  font-size: medium;
}
.container .panel-left button:hover,
.container .panel-left button:focus {
  background: #EAECEE;
}
.container .panel-left button:active {
  background: #D5D8DC;
}
.container .panel-left .panel-left-body {
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.1);
  padding: 20px 0;
}
.container .panel-left .panel-left-footer {
  margin-bottom: 30px;
}
.container .panel-right {
  margin-left: 60px;
  width: 100%;
  padding: 10px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
  flex-wrap: nowrap;
}
.container .panel-right .panel-right-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  gap: 10px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  padding: 10px 0;
}
@media (max-width: 680px) {
  .container .panel-right .panel-right-header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
  }
}
.container .panel-right .panel-right-header h1 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  white-space: nowrap;
  gap: 20px;
  background: #4481eb;
  padding: 10px 20px;
  border-radius: 10px;
  color: white;
}
.container .panel-right .panel-right-header .my-logo {
  text-decoration: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
}
.container .panel-right .panel-right-header .my-logo img {
  width: 40px;
  height: 40px;
  border: 3px solid white;
  border-radius: 100px;
  transition: 0.5s;
}
.container .panel-right .panel-right-header .search-bar {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  gap: 10px;
  border: none;
  outline: none;
  padding: 10px 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  border-radius: 100px;
  background: white;
}
.container .panel-right .panel-right-header .search-bar input[type=search] {
  background: transparent;
  outline: none;
  border: none;
}
.container .panel-right .panel-right-header .search-bar label i {
  transition: 0.3s;
}
.container .panel-right .panel-right-header .search-bar label i:hover {
  transform: rotate(360deg);
}
.container .panel-right .panel-right-body {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}
.container .panel-right .panel-right-body .panel-right-body-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: stretch;
  flex-wrap: nowrap;
  flex-wrap: wrap;
  gap: 10px;
  padding: 10px;
  min-width: none;
}
.container .panel-right .panel-right-body .panel-right-body-content .block {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: stretch;
  flex-wrap: nowrap;
  gap: 15px;
  flex-wrap: wrap;
}
.container .panel-right .panel-right-body .panel-right-body-content .block .block-title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  flex-wrap: nowrap;
  background: rgb(255, 255, 255);
  padding: 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  flex-wrap: nowrap;
}
.container .panel-right .panel-right-body .panel-right-body-content .block .block-title h2 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  gap: 10px;
}
.container .panel-right .panel-right-body .panel-right-body-content .block .block-title h2 i {
  font-size: medium;
  padding: 10px;
  color: white;
  background: #4481eb;
  border-radius: 100px;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
}
.container .panel-right .panel-right-body .panel-right-body-content .block .block-title .block-title-btn {
  width: 30px;
  height: 30px;
  border-radius: 100px;
  border: none;
  outline: none;
  background: transparent;
  transition: 0.3s ease-out;
}
.container .panel-right .panel-right-body .panel-right-body-content .block .block-title .block-title-btn:hover {
  background: rgba(0, 0, 0, 0.1);
}
.container .panel-right .panel-right-body .panel-right-body-content .block .block-title .block-title-btn:active {
  background: rgba(0, 0, 0, 0.3);
}
.container .panel-right .panel-right-body .panel-right-body-content .block .block-body {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: stretch;
  flex-wrap: nowrap;
  flex-wrap: wrap;
  gap: 15px;
}
/* ... */

